# pre-verification

umbral_verification/: Cargo.toml  Developing.md  Importing.md  README.md  clippy.toml
umbral_verification/examples/: schema.rs
umbral_verification/schema/: execute_msg.json  get_available_proxies_response.json  get_contract_state_response.json  get_data_i_d_response.json  get_delegation_status_response.json  get_fragments_response.json  get_next_proxy_task_response.json  instantiate_msg.json  query_msg.json
umbral_verification/src/: contract.rs  msg.rs  tests.rs
